--- a/fio.conf
+++ b/fio.conf
@@ -1,10 +1,9 @@
+# fio --filename=/dev/nvme0n1p4 fio.conf | grep "groupid\|IOPS" | sed 's/(groupid.*//' | sed 's/(.*//'
 [global]
-ioengine=libaio
 iodepth=1
-size=1g
 direct=1
-runtime=60
-directory=${TARGET}
+runtime=10
+# directory=${TARGET}
 stonewall
 
 [Seq-Read]
