--- a/fio.conf
+++ b/fio.conf
@@ -1,8 +1,9 @@
 # fio --filename=/dev/nvme0n1p4 fio.conf | grep "groupid\|IOPS" | sed 's/(groupid.*//' | sed 's/(.*//'
 [global]
+ioengine=libaio
 iodepth=1
 direct=1
-runtime=10
+runtime=5
 # directory=${TARGET}
 stonewall
 
