--- a/fio.conf
+++ b/fio.conf
@@ -3,8 +3,10 @@
 ioengine=libaio
 iodepth=1
 direct=1
-runtime=5
+runtime=1
+size=10G
 # directory=${TARGET}
+group_reporting
 stonewall
 
 [Seq-Read]
